# langchain-app

./: .gitignore  README.md  api_lcel_refactor.py  basic_chain.py  chain.py  chains.py  create_db.py  day1_self1.md  day4_self1.md  demo_script.md  embeddings_factory.py  evidence_metrix.md  handoff_note.md  interview_chains.py  interview_graph.py  interview_graph_wrapper.py  interview_lcel_step1.py  interview_lcel_step2.py  interview_rag.py  interview_rag_graph.py  interview_rag_pipeline.py  interview_schemas.py  interview_score_sample.json  main.py  models.py  pyproject.toml  rag_chain.py  rag_graph.py  rag_pipeline.py  schemas.py  sse_check.py  streamlit_rag_ui.py  submission_checklist.md
backend/: agents.py  agents_router.py  feedback_router.py  interview_router.py  resume_router.py  sessions.py  stream_router.py
chroma_company_docs/: chroma.sqlite3
chroma_job_docs/: chroma.sqlite3
docs/: sample.txt  samples.md
