[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "chroma>=0.2.0",
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "openai-agents>=0.17.6",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
